# sitebox

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
sitebox/: __main__.py  app.py  auth.py  config.py  mcp_api.py  rest_api.py  storage.py
tests/: conftest.py  test_auth.py  test_integration.py  test_mcp_api.py  test_mcp_http.py  test_rest_api.py  test_storage.py
